Import of PJFL/HTML-FormWidgets-0.4.163 from CPAN.
gitpan-cpan-distribution: HTML-FormWidgets
gitpan-cpan-version:      0.4.163
gitpan-cpan-path:         PJFL/html-formwidgets/HTML-FormWidgets-0.4.163.tar.gz
gitpan-cpan-author:       PJFL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for HTML::FormWidgets
 
+         - Fixed missing seperator in Menu subclass
+         - Added paragraph splitting to Paragraphs subclass
+         - Fixed bug in arg expansion in localize
+         - Fixed JS bug in group membership
+
 0.4.156  09/03/2009
          - Debugged menu widget
 
