--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for HTML::FormWidgets
 
+0.1.176  11/05/2009
+         - Added docs for paragraphs and slider
+
+0.4.171  27/04/2009
+         - Fixed paragraph rendering bug
+         - Improved testing idioms
          - Fixed missing seperator in Menu subclass
          - Added paragraph splitting to Paragraphs subclass
          - Fixed bug in arg expansion in localize
