--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for HTML::FormWidgets
 
+0.5.200  27/06/2009
+         - Changed key used to sign distro
+         - Use Class::MOP in ensure_class_loaded
+
 0.5.184  13/06/2009
          - Added more tests
 
